--- a/templates/home.html
+++ b/templates/home.html
@@ -16,10 +16,10 @@
   </head>
   <body>
     {% include 'nav.html' %}
-    <img class="img-fluid" id="banner" src="/static/banner.jpg">
+    {% include 'banner.html' %}
     <div class="container">
       <h1 class="text-center mt-2 mb-4">
-        {{company_name}} Careers
+        Wobble Careers
       </h1>
       <div class="row" style="margin-bottom:32px">
         <div class="col-md-6">
